--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ballpen.js",
-  "version": "0.1.0",
-  "description": "A tiny mvvm framework ready for building flexible web apps.",
-  "main": "index.js",
+  "version": "0.1.1",
+  "description": "A tiny, lightweight mvvm framework ready for building flexible web apps.",
+  "main": "dist/ballpen.min.js",
   "scripts": {
+    "dev": "rollup -c -w",
     "build": "node build/build.js"
   },
   "repository": {
@@ -11,7 +12,7 @@
     "url": "git+https://github.com/Becavalier/Ballpen.js.git"
   },
   "keywords": [
-    "mvvm"
+    "mvvm", "framework", "ballpen", "es6", "Two-way binding"
   ],
   "author": "YHSPY",
   "license": "MIT",
