--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ballpen.js",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A tiny, lightweight mvvm framework ready for building flexible web apps.",
   "main": "dist/ballpen.min.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Becavalier/Ballpen.js.git"
   },
   "keywords": [
-    "mvvm", "framework", "ballpen", "es6", "Two-way binding"
+    "mvvm", "framework", "ballpen", "es6", "Two-way binding", "tiny", "lightweight"
   ],
   "author": "YHSPY",
   "license": "MIT",
