--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-runtime": "^6.22.0"
+    "babel-runtime": "^6.22.0",
+    "underscore": "^1.8.3"
   }
 }
