--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-runtime": "^6.22.0",
     "ballpen-plugin-cache": "^0.1.1",
     "ballpen-plugin-cookie": "^0.1.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "velocity-animate": "^1.4.3"
   }
 }
