--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/ballpen.min.js",
   "scripts": {
     "dev": "rollup -c -w",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "test-server": "node ./node_modules/browser-sync/bin/browser-sync start --server ./"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "browser-sync": "^2.18.8",
     "chalk": "^1.1.3",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
