--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "node build/build.js",
-    "test-server": "node ./node_modules/browser-sync/bin/browser-sync start --server ./"
+    "lint": "eslint src build test",
+    "test:server": "node ./node_modules/browser-sync/bin/browser-sync start --server ./",
+    "test:e2e": "node test/e2e/runner.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +39,8 @@
     "babel-runtime": "^6.22.0",
     "browser-sync": "^2.18.8",
     "chalk": "^1.1.3",
+    "chromedriver": "^2.28.0",
+    "cross-spawn": "^5.1.0",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -44,6 +48,9 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-standard": "^2.0.1",
+    "http-server": "^0.9.0",
+    "nightwatch": "^0.9.13",
+    "nightwatch-helpers": "^1.2.0",
     "ora": "^1.1.0",
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
@@ -53,7 +60,7 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
-
+    "selenium-server": "^3.3.1",
     "shelljs": "^0.7.6"
   },
   "dependencies": {
