--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "node build/build.js",
     "lint": "eslint src build test",
     "test:server": "node ./node_modules/browser-sync/bin/browser-sync start --server ./",
-    "test:e2e": "node test/e2e/runner.js"
+    "test:e2e": "node test/e2e/runner.js",
+    "test": "npm run build && npm run lint && npm run test:e2e"
   },
   "repository": {
     "type": "git",
